@@ -1,57 +1,58 @@
 package recorder;
 
 import java.io.File;
-import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.Scanner;
+import java.util.stream.Stream;
 
 import static java.lang.Math.max;
 
 public class write {
-    public static void setVariable(String filename, int lineNumber, String data) throws IOException {
-        Path path = Paths.get(filename);
+    public static void setVariable(File file, int lineNumber, String data) throws IOException {
+        Path path = Path.of(file.getPath());
 //        ArrayList<String> lines = new ArrayList<>();
         List<String> lines = Files.readAllLines(path);
         lines.set(lineNumber, data);
         Files.write(path, lines);
     }
-    public void createFileLine(String filename, int line, String data) throws IOException{
-        Path path = Paths.get(filename);
+    public void createFileLine(File file, int line, String data) throws IOException{
+        Path path = Path.of(file.getPath());
         List<String> lines = Files.readAllLines(path);
-        lines.add(line,data );
+//        System.out.println(lines);
+//        System.out.println("i should add "+line+" with data= "+data);
+        lines.add(line,data);
+//        System.out.println(lines);
         Files.write(path, lines);
     }
     public void createAndWriteFile(String wo, String wi, Integer t){
         String filename = "./Logs/log.txt";
         File file= new File(filename);
-        try{
 
-
-            if (file.createNewFile()) {
-                System.out.println("File created: " + file.getName());
-            } else {
-                System.out.println("File already exists.");
-            }
-        } catch (IOException e) {
-            System.out.println("An error occurred.");
-            e.printStackTrace();
-        }
         try {
-            FileWriter myWriter = new FileWriter(file);
-            Scanner myReader = new Scanner(file);
+
+//            Scanner myReader = new Scanner(file);
             int line=0;
             // int line -> mod0
             // str word -> mod0+1
             // str winner -> mod5+2
             // int how-many-tries -> mod5 +3
             Path path = Paths.get(filename);
+//            URI uri = Objects.requireNonNull(this.getClass().getResource(filename)).toURI();
             List<String> lines = Files.readAllLines(path);
-            if(lines.size()<=4*5-1){
-                line=lines.size();
+            System.out.println("path= "+String.valueOf(path.toString()));
+            long lineCount;
+            try (Stream<String> stream = Files.lines(path, StandardCharsets.UTF_8)) {
+                lineCount = stream.count();
+            }
+            System.out.println("file has length= "+lineCount);
+            System.out.println("lines= ");
+            System.out.println(lines);
+            if(lineCount<=4*5-1){
+                line= (int) lineCount;
             }
             else {
                 for (int i = 0; i < 5; i++) {
@@ -62,20 +63,25 @@ public class write {
                         continue;
                     }
                 }
+
             }
+//            System.out.println("i should write to "+(line%5));
+//            System.out.println("or [] i should write to "+ line);
             try{
-                if(file.length()>=line%5+3) {
-                    setVariable(filename, line % 5, String.valueOf(line + 1));
-                    setVariable(filename, line % 5 + 1, wo);
-                    setVariable(filename, line % 5 + 2, wi);
-                    setVariable(filename, line % 5 + 3, String.valueOf(t));
+                if(lineCount>=20) {
+                    System.out.println("trying to modify file...");
+                    setVariable(file, (line % 5)*4, String.valueOf(line + 1));
+                    setVariable(file, (line % 5)*4+1 , wo);
+                    setVariable(file, (line % 5)*4 + 2, wi);
+                    setVariable(file, (line % 5)*4+ 3, String.valueOf(t));
+                    System.out.println("file modified succefully");
                 }
                 else{
                     System.out.println("the line i will write is: "+line);
-                    createFileLine(filename, line%5, String.valueOf(line+1));
-                    createFileLine(filename, line%5+1, wo);
-                    createFileLine(filename, line%5+2, wi);
-                    createFileLine(filename, line%5+3, String.valueOf(t));
+                    createFileLine(file, line, String.valueOf(line+1));
+                    createFileLine(file, line+1, wo);
+                    createFileLine(file, line+2, wi);
+                    createFileLine(file, line+3, String.valueOf(t));
 
 //                    myWriter.write(line + 1 +"\n");
 //                    myWriter.write(wo +"\n");
@@ -91,8 +97,8 @@ public class write {
 
 
 
-            myWriter.close();
-            System.out.println("Successfully wrote to the file.");
+//            myWriter.close();
+            System.out.println("Successfully change file.");
         } catch (IOException e) {
             System.out.println("An error occurred.");
             e.printStackTrace();
